Task 1: data acquisition, plus a working conda environment
Environment
-----------
Miniforge's NSIS installer aborts on this machine (exit code 2, three attempts,
no diagnostic), so the environment is built with micromamba instead -- a single
11 MB binary at C:\micromamba. Same conda-forge environment, different
bootstrap. Nothing was added to PATH and system Python 3.13 remains the default.

environment.yml pins openjdk=25, NOT 21 as the plan originally said. r5py's conda
recipe declares "openjdk >=21", but r5py/util/jvm.py unconditionally passes
--enable-native-access=ALL-UNNAMED, a flag that only exists from JDK 22 (JEP 454).
On Java 21 the solver is satisfied and the JVM then refuses to start. The declared
dependency understates the real requirement. Verified working: r5py 1.1.7 on
Java 25.0.2, R5 v7.5.1 jar.

python=3.12 is pinned because pyogrio -- geopandas' default I/O engine -- had no
Python 3.13 wheel, which would force a fallback engine for no benefit.

environment.lock.yml records the exact resolved versions (207 packages).

Task 1
------
src/fetch_data.py downloads the GTFS feed and the Geofabrik Nebraska OSM extract
into data/raw/ and records provenance in MANIFEST.json. It is idempotent, and
where the publisher supplies a checksum it verifies against that rather than only
against our own hash -- a self-computed digest would record a truncated download
as valid. Geofabrik's md5 verified OK.

The OSM extract is ~96 MB, not the ~250 MB estimated throughout the docs; that
figure is corrected in PLAN.md, README.md, .gitignore, and fetch_data.py.

.gitignore now tracks data/raw/MANIFEST.json while still excluding the data
itself. The previous "data/raw/" form made this impossible, since git will not
descend into an ignored directory to honour a negation.

Known loose end: the gtfs.zip manifest entry has null timestamps because that
file was fetched by hand during Task 0 rather than through the script.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>